docs/css/index.css
.container-fluid{
    padding: 0;
    font-family: 'Anonymous Pro', monospace;
    background-size:cover;
}

.navbar {
    background-color:#FEFEF4;
    min-font-size: 25rem;
    /*font-size:1.5vw !important;*/
}

body{
    padding-top:50px;
    padding-bottom: -70px;
}

.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

#heroImage{
    /*height:100%;
    width:100%;
    background-size:cover !important;*/
    /* Set rules to fill background */
    min-height: 100%;
    min-width: 1468px;

    /* Set up proportionate scaling */
    width: 100%;
    height: auto;

    /* Set up positioning */
    position: fixed;
    top: 0;
    left: 0;
}

@media screen and (max-width: 1468px) {
    #heroImage {
        left: 50%;
        margin-left: -50%; /* 50% */
    }

    #hello {
        font-size: 14vw;
        color: white;
    }

    #subhead {
        margin-top: 7vw;
        font-size: 1.5vw;
        color: white;
    }

    #button {
        margin-top: 12vw;
    }

    .elite {
        color: #000000;
        background-color: #F7DCA7;
        border: .1em solid #F7DCA7;
        text-transform: lowercase;
        padding: .5em .5em;
        border-radius: 5px;
        transition: all .5s ease;
        cursor: pointer;
        font-size: 1.5vw;
    }

    .elite:hover {
        letter-spacing: 3px;
        color: #F7DCA7;
        background: #000000;
    }

    .copyright {
        padding: 28px 0;
        margin-top: 0; /*55px;*/
        background-color: #FEFEF4;
    }

    .copyright span,
    .copyright a {
        color: #878787;
        -webkit-transition: all 0.3s linear;
        -o-transition: all 0.3s linear;
        transition: all 0.3s linear;
    }
}

